[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cueapi-sdk"
version = "0.1.0"
description = "The official Python SDK for CueAPI — scheduling infrastructure for agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "CueAPI", email = "support@cueapi.ai" }]
keywords = ["cueapi", "scheduling", "ai-agents", "cron", "webhooks", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://cueapi.ai"
Documentation = "https://docs.cueapi.ai"
Repository = "https://github.com/cueapi/cueapi-python"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["cueapi"]
