[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cueapi-sdk"
version = "0.1.3"
description = "Official Python SDK for CueAPI — open-source execution accountability primitive for AI agents. Schedule agent work, require evidence-backed outcomes, and gate execution with write-once verification."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [{ name = "Vector Apps", email = "support@cueapi.ai" }]
maintainers = [{ name = "Vector Apps", email = "support@cueapi.ai" }]
keywords = [
    "cueapi",
    "ai-agents",
    "agent-infrastructure",
    "scheduling",
    "cron",
    "webhooks",
    "sdk",
    "llm",
    "llm-observability",
    "accountability",
    "verification",
    "outcome-reporting",
    "claude",
    "gpt",
    "gemini",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Distributed Computing",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://cueapi.ai"
Documentation = "https://docs.cueapi.ai"
Repository = "https://github.com/cueapi/cueapi-python"
"Bug Tracker" = "https://github.com/cueapi/cueapi-python/issues"
Changelog = "https://github.com/cueapi/cueapi-python/blob/main/CHANGELOG.md"
"Source Code" = "https://github.com/cueapi/cueapi-python"
"Status Page" = "https://status.cueapi.ai"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["cueapi"]
